--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>CVMOHAMAD</title>
+	<title>CVMANOJ</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">CVMOHAMAD</a>
+		         <a href="index.html">CVMANOJ</a>
 		      </div>
 
 		   	<nav id="main-nav-wrap">
@@ -72,11 +72,11 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Mohamad Abou Alnaser.</h1>
+	   			<h1>I'm Manoj D.</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>Back-end Developer</span>
+	   				<span>Devops Engineer</span>
+	   				<span>SysOps Engineer</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">En savoir plus</a>
@@ -103,7 +103,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/MOHAMAD.png" alt="Profile Picture">
+   				<img src="images/MANOJ.png" alt="Profile Picture">
 
    				<p class="lead">Actuellement apprenant à
 Simplon.co en développement Web
@@ -131,23 +131,23 @@ mobile. </p>
    			<ul class="info-list">
    				<li>
    					<strong>Nom et Prénom:</strong>
-   					<span>ABOU ALNASER Mohamad</span>
+   					<span>Manoj D</span>
    				</li>
    				<li>
    					<strong>Date de naissance:</strong>
-   					<span>Né le : 15 / 09 / 1982</span>
+   					<span>Né le : 18 / 07 / 1996</span>
    				</li>
                 <li>
    					<strong>Email:</strong>
-   					<span>m.aboualnasser@gmail.com</span>
+   					<span>mdmanoj141@gmail.com</span>
    				</li>
                 <li>
    					<strong>Adress:</strong>
-   					<span>2 rue Barbes, 92 210 Montrouge</span>
+   					<span>Rajajinagar Bangalore</span>
    				</li>
    				<li>
    					<strong>Phone:</strong>
-   					<span>+ 33 6 27 76 01 44</span>
+   					<span>+ 91 9380651545</span>
    				</li>
 
 
@@ -163,27 +163,27 @@ mobile. </p>
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<strong>JENKINS</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS</strong>
+				   	<strong>DOCKER</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<strong>KUBERNETES</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>Bootstrap</strong>
+				   	<strong>TERRAFORM</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>PHP</strong>
+				   	<strong>AWS</strong>
 				   </li>
 				   <li>
                     <div class="progress percent75"><span>75%</span></div>
-				   	<strong>Java script</strong>
+				   	<strong>SHELL SCRIPTING</strong>
 				   </li>
 
 				</ul> <!-- /skill-bars -->
@@ -401,8 +401,8 @@ technicien réseau .</p>
 
 	            	<h3>SYSTEMES ET BASE DE DONNEES</h3>
 
-		            <p class="desc"># Windows # Ubuntu
-# MySQL </br># Firebase.
+		            <p class="desc"># Linux # Ubuntu
+# AWS </br># Python.
 	        			</p>
 
 	            </div>
@@ -543,7 +543,7 @@ randonnée.
 
    			<h5>Envoyez-moi un e-mail</h5>
 
-   			<p>m.aboualnasser@gmail.com
+   			<p>mdmanoj@141@gmail.com
 
 
 			   </p>
@@ -559,7 +559,7 @@ randonnée.
    			<h5>Call Me At</h5>
 
    			<p>Phone:
-			   	+ 33 6 27 76 01 44<br>
+			   	+ 91 9380651545<br>
 
 			   </p>
 
@@ -580,7 +580,7 @@ randonnée.
              			<ul class="footer-social">
         			      
         			      <li><a target="_blank"href="https://twitter.com/MOHAMADABOUALNA"><i class="fa fa-twitter"></i></a></li>
-        			      <li><a target="_blank"href="https://github.com/aboualnaser"><i class="fa fa-github" aria-hidden="true"></i>
+        			      <li><a target="_blank"href="https://github.com/manoj-md"><i class="fa fa-github" aria-hidden="true"></i>
 </a></li>
         			   </ul>
 
