--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">A PROPOS</a></li>
+						<li><a class="smoothscroll"  href="#about" title="">ABOUT</a></li>
 						<li><a class="smoothscroll"  href="#Work" title="">Work Experience</a></li>
 						<li><a class="smoothscroll"  href="#MORE" title="">MORE</a></li>
 
@@ -79,7 +79,7 @@
 	   				<span>SysOps Engineer</span>
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#about" title="">En savoir plus</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">FIND OUT MORE</a>
 
 	   		</div>
 
@@ -125,16 +125,16 @@ mobile. </p>
 
    		<div class="col-six tab-full">
 
-   			<h3>PRATIQUE </h3>
+   			<h3>PERSONAL DETAILS </h3>
 
 
    			<ul class="info-list">
    				<li>
-   					<strong>Nom et Prénom:</strong>
+   					<strong>NAME:</strong>
    					<span>Manoj D</span>
    				</li>
    				<li>
-   					<strong>Date de naissance:</strong>
+   					<strong>DATE OF BIRTH:</strong>
    					<span>Né le : 18 / 07 / 1996</span>
    				</li>
                 <li>
@@ -142,7 +142,7 @@ mobile. </p>
    					<span>mdmanoj141@gmail.com</span>
    				</li>
                 <li>
-   					<strong>Adress:</strong>
+   					<strong>ADDRESS:</strong>
    					<span>Rajajinagar Bangalore</span>
    				</li>
    				<li>
@@ -194,8 +194,8 @@ mobile. </p>
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Embaochez-moi</a>
-   			<a href="https://github.com/aboualnaser/aboualnaser.github.io/raw/master/images/CV%20_%20Mohamad%20Abou%20Alnaser_Dev%20Web%20PHP%20.pdf" target="_blank" title="Download CV" class="button button-primary">Téléchargez mon  CV</a>
+   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">CONTACT ME</a>
+   			<a href="https://github.com/aboualnaser/aboualnaser.github.io/raw/master/images/CV%20_%20Mohamad%20Abou%20Alnaser_Dev%20Web%20PHP%20.pdf" target="_blank" title="Download CV" class="button button-primary">DOWNLOAD MY CV</a>
    		</div>
    	</div>
 
@@ -210,7 +210,7 @@ mobile. </p>
 
    		<div class="col-twelve resume-header">
 
-   			<h2>Expériences Professionelles</h2>
+   			<h2>PROFESSIONAL EXPERIENCES</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -399,10 +399,10 @@ technicien réseau .</p>
 
 	            <div class="service-content">
 
-	            	<h3>SYSTEMES ET BASE DE DONNEES</h3>
+	            	<h3>SYSTEMS AND DATABASE</h3>
 
 		            <p class="desc"># Linux # Ubuntu
-# AWS </br># Python.
+# AWS </br># Dynamodb.
 	        			</p>
 
 	            </div>
@@ -413,20 +413,20 @@ technicien réseau .</p>
 
 	            <div class="service-content">
 
-	            	<h3>LANGUES</h3>
+	            	<h3>LANGUAGES</h3>
 
 		            <ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent100"><span>100%</span></div>
-				   	<strong>ARABE</strong>
+				   	<strong>KANNADA</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>ANGLAIS</strong>
+				   	<strong>ENGLISH</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>FRANcAIS</strong>
+				   	<strong>HINDI</strong>
 				   </li>
 				   </ul>
 
@@ -439,10 +439,10 @@ technicien réseau .</p>
 
 	            <div class="service-content">
 
-	            	 <h3>Personnalité</h3>
+	            	 <h3>PERSONALITY</h3>
 
-		            <p class="desc"> Personnalité : # sérieux # dynamique # organisé
-# travail en équipe .
+		            <p class="desc"> Personality : # Team Player  # Quick Learner
+# Dedicated towars work .
 	         		</p>
 
 	         	</div>
@@ -455,10 +455,10 @@ technicien réseau .</p>
 
 	            <div class="service-content">
 
-	            	<h3>Centres d’intérêts</h3>
+	            	<h3>INTERESTS</h3>
 
-		            <p class="desc">Centres d’intérêts : # cinéma d’action # poésie classique #
-randonnée.
+		            <p class="desc">Interests : # Movies # Bike Riding #
+Bloging.
 	         		</p>
 
 	            </div>
@@ -484,7 +484,7 @@ randonnée.
    		<div class="col-twelve">
 
    			<h5>Contact</h5>
-   			<h1>N'hésitez pas à me contacter.</h1>
+   			<h1>Contact Me Here.</h1>
 
 
 
@@ -498,10 +498,10 @@ randonnée.
             <!-- form -->
             <form id="contactform" action="//formspree.io/m.aboualnasser@gmail.com" method="POST">
 
-      <input type="text" name="name" placeholder="Votre Nome">
-      <input type="email" name="_replyto" placeholder="Votre Mail">
-      <textarea name="message" placeholder="Votre Message"></textarea>
-      <input type="submit" value="Envoyez">
+      <input type="text" name="name" placeholder="Your Namr">
+      <input type="email" name="_replyto" placeholder="Your Mail">
+      <textarea name="message" placeholder="Your Message"></textarea>
+      <input type="submit" value="SEND">
   </form>
  						    <!-- Form End -->
 
@@ -525,12 +525,12 @@ randonnée.
    				<i class="icon-pin"></i>
    			</div>
 
-   			<h5>Pour me contacter</h5>
+   			<h5>LOCATION</h5>
 
    			<p>
-           2 rue barbes<br>
-            92120<br>
-            Montrouge
+           18 <br>
+            Rajajinagar<br>
+            Bangalore
             </p>
 
    		</div>
@@ -541,7 +541,7 @@ randonnée.
    				<i class="icon-mail"></i>
    			</div>
 
-   			<h5>Envoyez-moi un e-mail</h5>
+   			<h5>SEND ME AN E-MAIL</h5>
 
    			<p>mdmanoj@141@gmail.com
 
@@ -579,8 +579,8 @@ randonnée.
 
              			<ul class="footer-social">
         			      
-        			      <li><a target="_blank"href="https://twitter.com/MOHAMADABOUALNA"><i class="fa fa-twitter"></i></a></li>
-        			      <li><a target="_blank"href="https://github.com/manoj-md"><i class="fa fa-github" aria-hidden="true"></i>
+        			      <li><a target="_blank"href="https://www.linkedin.com/in/manoj-d-09b967212/"><i class="fa fa-linkdin"></i></a></li>
+        			      <li><a target="_blank"href="https://github.com/manoj-md/"><i class="fa fa-github" aria-hidden="true"></i>
 </a></li>
         			   </ul>
 
