--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ Bloging.
    				<i class="icon-pin"></i>
    			</div>
 
-   			<h5>LOCATION</h5>
+   			<h5>ADDRESS</h5>
 
    			<p>
            18 <br>
@@ -543,7 +543,7 @@ Bloging.
 
    			<h5>SEND ME AN E-MAIL</h5>
 
-   			<p>mdmanoj@141@gmail.com
+   			<p>mdmanoj141@gmail.com
 
 
 			   </p>
