--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Bloging.
 
              			<ul class="footer-social">
         			      
-        			      <li><a target="_blank"href="https://www.linkedin.com/in/manoj-d-09b967212/"><i class="fa fa-linkdin"></i></a></li>
+        			      <li><a target="_blank"href="https://www.linkedin.com/in/manoj-d-09b967212/"><i class="fa fa-linkedin-square"></i></a></li>
         			      <li><a target="_blank"href="https://github.com/manoj-md/"><i class="fa fa-github" aria-hidden="true"></i>
 </a></li>
         			   </ul>
