--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ mobile. </p>
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">CONTACT ME</a>
-   			<a href="https://github.com/aboualnaser/aboualnaser.github.io/raw/master/images/CV%20_%20Mohamad%20Abou%20Alnaser_Dev%20Web%20PHP%20.pdf" target="_blank" title="Download CV" class="button button-primary">DOWNLOAD MY CV</a>
+   			<a href="https://github.com/aboualnaser/aboualnaser.github.io/raw/master/images/manoj-res.pdf.pdf" target="_blank" title="Download CV" class="button button-primary">DOWNLOAD MY CV</a>
    		</div>
    	</div>
 
@@ -498,7 +498,7 @@ Bloging.
             <!-- form -->
             <form id="contactform" action="//formspree.io/m.aboualnasser@gmail.com" method="POST">
 
-      <input type="text" name="name" placeholder="Your Namr">
+      <input type="text" name="name" placeholder="Your Name">
       <input type="email" name="_replyto" placeholder="Your Mail">
       <textarea name="message" placeholder="Your Message"></textarea>
       <input type="submit" value="SEND">
