--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
     </div>
 
-<h1 class="credit"> created by <span>mr. web designer</span> | all rights reserved! </h1>
+<h1 class="credit"> created by <span>mr. manoj md</span> | all rights reserved! </h1>
 
 </section>
 
